--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -22,10 +22,10 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pyinstaller
+          pip install "pyinstaller>=6.0,<7"
 
       - name: Build exe
-        run: pyinstaller build_exe.spec
+        run: pyinstaller build_exe.spec --noconfirm
 
       - name: Upload to Release (при релизе)
         if: github.event_name == 'release'
