--- a/.github/workflows/build-exe.yml
+++ b/.github/workflows/build-exe.yml
@@ -33,7 +33,8 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           Copy-Item "dist/Семейное_древо.exe" "dist/Family_tree.exe"
-          gh release upload ${{ github.event.release.tag_name }} dist/Family_tree.exe --clobber
+          Copy-Item "scripts/Запуск_release.bat" "dist/Запуск.bat"
+          gh release upload ${{ github.event.release.tag_name }} dist/Family_tree.exe dist/Запуск.bat --clobber
 
       - name: Upload artifact (при ручном запуске)
         if: github.event_name == 'workflow_dispatch'
